Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114490

Views do not resize when in slice view

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.0 Beta3, 6.7.0 FF
    • 6.6.0 FF
    • Graphs: 3D
    • None
    • 83a396797 (dev), 678dad94d (6.6)

      Steps to reproduce:

      • take any example that has slicing on
      • go to slice view
      • resize the window

      -> slice view and main view remain the same size, even though they should be scaled

        For Gerrit Dashboard: QTBUG-114490
        # Subject Branch Project Status CR V

            spouke Sakaria Pouke
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes