Fix view resizing when in slice view

Pick-to: 6.6
Fixes: QTBUG-114490
Change-Id: Ic65706b04263a72951a94fe575c47f225a531779
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>